objects/ifttt__IFTTT_Event__c.object
<CustomObject>
    <fields>
        <fullName>ifttt__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ifttt__Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ifttt__Related_Object_Type__c</fullName>
        <label>Related Object Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ifttt__Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>IFTTT Event</label>
    <listViews>
        <fullName>ifttt__All_IFTTT_Events</fullName>
        <columns>NAME</columns>
        <columns>ifttt__Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All IFTTT Events</label>
    </listViews>
    <nameField>
        <label>IFTTT Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFTTT Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>